--- a/ui/app/styles/core/level.scss
+++ b/ui/app/styles/core/level.scss
@@ -53,8 +53,7 @@
   justify-content: center;
 }
 
-.level-item .title,
-.level-item .subtitle {
+.level-item .title {
   margin-bottom: 0;
 }
 
