--- a/ui/app/styles/core/tags.scss
+++ b/ui/app/styles/core/tags.scss
@@ -41,3 +41,7 @@
 .tag.is-small {
   height: auto;
 }
+
+.tag.title {
+  vertical-align: middle;
+}
