--- a/ui/app/styles/core/title.scss
+++ b/ui/app/styles/core/title.scss
@@ -1,5 +1,4 @@
-.title:not(:last-child),
-.subtitle:not(:last-child) {
+.title:not(:last-child) {
   display: block;
   margin-bottom: 1rem;
 
